--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </main>
 
     <footer>
-        <a href="https://maps.app.goo.gl/Rb2nWmz9Jd3zz2LR7" class="whatsapp-btn" target="_blank">Visitanos en San Martín 1175 - Huerta Grande &nbsp;<i class="bi bi-geo-alt"></i></a>
+        <a href="https://maps.app.goo.gl/Rb2nWmz9Jd3zz2LR7" class="whatsapp-btn" target="_blank">Visitanos en San Martín 1175 <br> Huerta Grande &nbsp;<i class="bi bi-geo-alt"></i></a>
         <a href="https://www.instagram.com/frey.oficialhg?igsh=M3ZidGs1N2M5MXhs" class="whatsapp-btn" target="_blank"><br><br>Conoce nuestras promos &nbsp;<i class="bi bi-instagram"></i></a>
         <a href="https://wa.me/5493548546704" class="whatsapp-btn" target="_blank"><br><br>También hacemos delivery &nbsp;<i class="bi bi-whatsapp"></i><br><br></a>
         <p>© 2024 FREY. Todos los derechos reservados.</p>        
